Closed
Bug 1351487
Opened 9 years ago
Closed 6 years ago
Bug 1351487 - Responsive Design Mode reports incorrect window.screen values.
Categories
(DevTools :: Responsive Design Mode, defect, P1)
DevTools
Responsive Design Mode
Tracking
(firefox69 fixed)
RESOLVED
FIXED
Firefox 69
| Tracking | Status | |
|---|---|---|
| firefox69 | --- | fixed |
People
(Reporter: stephan.aran, Assigned: mtigley)
References
(Blocks 1 open bug)
Details
(Whiteboard: [rdm-mvp])
Attachments
(3 files)
User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/57.0.2987.110 Safari/537.36
Steps to reproduce:
Tried to display the screen.availWidth property while in responsive design mode in firefox developer edition
Actual results:
The size of my actual (physical) screen got displayed
Expected results:
The size of the screen I was inspecting (the one selected in the responsive design mode) should have been displayed
Thanks for filing!
Looks like this is an issue with both old and new RDM. So far, we've left these properties alone in RDM. Chrome does appear to fix them up in their equivalent tool.
Status: UNCONFIRMED → NEW
Ever confirmed: true
Priority: -- → P3
Whiteboard: [rdm-v2][triage]
See Also: → 1352070
Updated•7 years ago
|
Product: Firefox → DevTools
Updated•6 years ago
|
Whiteboard: [rdm-v2][triage] → [rdm-v2][triage][rdm-mvp]
Updated•6 years ago
|
Priority: P3 → P2
Whiteboard: [rdm-v2][triage][rdm-mvp] → [rdm-mvp]
Updated•6 years ago
|
Priority: P2 → P3
Whiteboard: [rdm-mvp] → [rdm-reserve]
| Assignee | ||
Updated•6 years ago
|
Assignee: nobody → mtigley
Status: NEW → ASSIGNED
Priority: P3 → P1
Updated•6 years ago
|
Whiteboard: [rdm-reserve] → [rdm-mvp]
| Assignee | ||
Comment 3•6 years ago
|
||
| Assignee | ||
Comment 4•6 years ago
•
|
||
| Assignee | ||
Updated•6 years ago
|
Summary: screen.availWidth, in responsive design mode, displays size of physical screen, not of inspected screen → Bug 1351487 - Responsive Design Mode reports incorrect window.screen values.
Updated•6 years ago
|
Attachment #9067221 -
Attachment description: Bug 1351487 - Part 1: In RDM, return the window's inner rect size as the screen's available size values. → Bug 1351487 - Part 1: In RDM, return the window's inner rect size as the screen's availWidth/availHeight and width/height values.
| Assignee | ||
Comment 5•6 years ago
|
||
Pushed by mtigley@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/4325a177cf16
Part 1: In RDM, return the window's inner rect size as the screen's availWidth/availHeight and width/height values. r=Ehsan,bradwerth
https://hg.mozilla.org/integration/autoland/rev/1949d95ea16d
Part 2: Add tests for ensuring that window screen sizing values reported in RDM are correct. r=bradwerth
Comment 7•6 years ago
|
||
| bugherder | ||
https://hg.mozilla.org/mozilla-central/rev/4325a177cf16
https://hg.mozilla.org/mozilla-central/rev/1949d95ea16d
Status: ASSIGNED → RESOLVED
Closed: 6 years ago
status-firefox69:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → Firefox 69
You need to log in
before you can comment on or make changes to this bug.
Description
•