Bug 1351487 - Part 1:  In RDM, return the window's inner rect size as the screen's availWidth/availHeight and width/height values. r=Ehsan,bradwerth

Differential Revision: https://phabricator.services.mozilla.com/D32410