dom/base/nsScreen.h
@@ -48,6 +48,11 @@ class nsScreen : public mozilla::DOMEventTargetHelper {
   int32_t GetWidth(ErrorResult& aRv) {
     nsRect rect;
     if (IsDeviceSizePageSize()) {
+      if (IsInRDMPane()) {
+        GetRDMScreenSize(rect);
+        return rect.Width();
+      }
+
       if (nsCOMPtr<nsPIDOMWindowInner> owner = GetOwner()) {
         int32_t innerWidth = 0;
         aRv = owner->GetInnerWidth(&innerWidth);
@@ -62,6 +67,11 @@ class nsScreen : public mozilla::DOMEventTargetHelper {
   int32_t GetHeight(ErrorResult& aRv) {
     nsRect rect;
     if (IsDeviceSizePageSize()) {
+      if (IsInRDMPane()) {
+        GetRDMScreenSize(rect);
+        return rect.Height();
+      }
+
       if (nsCOMPtr<nsPIDOMWindowInner> owner = GetOwner()) {
         int32_t innerHeight = 0;
         aRv = owner->GetInnerHeight(&innerHeight);
@@ -136,6 +146,7 @@ class nsScreen : public mozilla::DOMEventTargetHelper {
   nsresult GetRect(nsRect& aRect);
   nsresult GetAvailRect(nsRect& aRect);
   nsresult GetWindowInnerRect(nsRect& aRect);
+  nsresult GetRDMScreenSize(nsRect& aRect);
 
  private:
   explicit nsScreen(nsPIDOMWindowInner* aWindow);
@@ -144,6 +155,8 @@ class nsScreen : public mozilla::DOMEventTargetHelper {
   bool IsDeviceSizePageSize();
 
   bool ShouldResistFingerprinting() const;
+
+  bool IsInRDMPane() const;
 
   RefPtr<mozilla::dom::ScreenOrientation> mScreenOrientation;
 };
